Fixed display none on mobile image

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3635,6 +3635,10 @@
 						margin-top: 2em;
 					}
 
+			.box .image.featured img.mobile-image  {
+				display: inherit;
+			}
+
 			.box .image.featured img.full-image  {
 				display: none;
 			}
